--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationGroupView.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationGroupView.mxml
@@ -29,7 +29,7 @@
         <![CDATA[
             import org.openwms.web.flex.client.model.*;
 			import org.openwms.common.domain.LocationGroup;
-			import org.openwms.web.flex.client.event.LocationEvent;
+			import org.openwms.web.flex.client.common.event.LocationEvent;
 			import mx.collections.ArrayCollection;
 			import mx.events.*; 
 			[Bindable]
