--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/Main.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/Main.mxml
@@ -28,10 +28,14 @@
         <![CDATA[
         import mx.collections.ArrayCollection;
         import mx.collections.XMLListCollection;
+        import org.openwms.web.flex.client.event.SwitchScreenEvent;
+        import org.openwms.web.flex.client.model.ModelLocator;
 
         [Bindable]
         public var menuCollection:ArrayCollection;
-
+        [Bindable]
+        private var modelLocator:ModelLocator = ModelLocator.getInstance();
+            
         private var menuList:XMLList =
                 <>
                     <menuitem label="Transport Management">
@@ -79,15 +83,19 @@
         {
             return new ArrayCollection();
         }
+        
+        public function getViews():ArrayCollection
+        {
+            return new ArrayCollection();
+        }
 
         ]]>
     </mx:Script>
 
     <mx:VBox height="100%" width="100%" verticalGap="0" backgroundColor="#C2DAEF">
-        <mx:Canvas width="100%" height="66" backgroundImage="@Embed(source='openwms_banner.jpg')" backgroundSize="100%">
-            <mx:Image source="@Embed('/assets/images/openwms_header.png')" />
+        <mx:Canvas width="100%" height="66"  backgroundSize="100%">
         </mx:Canvas>
-        <mx:Canvas width="100%" height="25" backgroundImage="@Embed(source='breadcrumbs.jpg')" backgroundSize="100%">
+        <mx:Canvas width="100%" height="25"  backgroundSize="100%">
             <mx:MenuBar id="commonMenuBar" labelField="@label">
                 <mx:XMLList>
                     <menuitem label="Administration">
@@ -105,14 +113,12 @@
             </mx:MenuBar>
         </mx:Canvas>
         <mx:HBox width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
-        <mx:ViewStack id="commonViewStack" selectedIndex="{loginView.authenticated ? modelLocator.mainViewStackIndex : modelLocator.mainViewStackIndex}">
-            <view:LoginView id="loginView" onLogin="login" cornerRadius="20" borderStyle="solid" alpha="1.0" borderThickness="3"/>
-            <view:EmptyScreenView />
-            <view:ModuleManagementView />
+        <mx:ViewStack id="commonViewStack" selectedIndex="{modelLocator.mainViewStackIndex}">
+<!-- 
             <view:LocationView />
             <view:LocationGroupView />
-            <view:UserManagementView />
             <view:TransportUnitView />
+         -->
         </mx:ViewStack>
         </mx:HBox>
     </mx:VBox>
